# experimental

linear_algebra/: alt_test.cpp  linear_algebra.filters  linear_algebra.hpp  linear_algebra.sln  linear_algebra.vcxproj  linear_algebra_fwd.hpp  matrix.hpp  matrix_add_subtract.hpp  matrix_element_traits.hpp  matrix_engines.hpp  matrix_multiply.hpp  matrix_traits.hpp
simd/: CMakeLists.txt  simd.cpp
simd/include/: simd.hpp  test.hpp  utils.hpp
simd/src/: main.cpp  simd.cpp  test.cpp
